correcciones jwt